@@ -6,6 +6,12 @@ if test "x$build_arts" = "xno"; then
 	DO_NOT_COMPILE="$DO_NOT_COMPILE kttsd"
 fi
 
+AC_ARG_ENABLE(kttsd-gstreamer,
+              AC_HELP_STRING([--enable-kttsd-gstreamer],
+                             [build KTTSD GStreamer audio plugin [default=no]]),
+              gstreamer_plugin=$enableval,
+              gstreamer_plugin=no)
+
 dnl ================================================================================
 
 dnl KDE_PKG_CHECK_MODULES(GSTUFF, gtk+-2.0 >= 1.3 glib = 1.3.4, action-if, action-not)
@@ -118,4 +124,6 @@ else
 	AC_DEFINE(HAVE_GSTREAMER, 0, [have GStreamer])
 	AC_MSG_WARN([No pkg-config found, required for GStreamer])
 fi
-AM_CONDITIONAL(include_kttsd_gstplayer, [test "x$have_gst" = "xyes"])
+
+AM_CONDITIONAL(include_kttsd_gstplayer, [test "x$have_gst" = "xyes" && test "x$gstreamer_plugin" = "xyes"])
+
